[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.32"
hex = "0.4.3"
secp256k1 = { version = "0.31.1", features = ["rand", "std"] }
rand = "0.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = "0.30.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
